package http

import (
	"context"
	"encoding/json"
	"fmt"
	"log"
	"math/rand"
	"net/http"

	"github.com/abhishek622/moviedock/movie/internal/gateway"
	"github.com/abhishek622/moviedock/pkg/discovery"
	"github.com/abhishek622/moviedock/rating/pkg/model"
)

type Gateway struct {
	registry discovery.Registry
}

func New(registry discovery.Registry) *Gateway {
	return &Gateway{registry}
}

func (g *Gateway) GetAggregatedRating(ctx context.Context, recordID model.RecordID, recordType model.RecordType) (float64, error) {
	addrs, err := g.registry.ServiceAddresses(ctx, "rating")
	if err != nil {
		return 0, err
	}

	// Use HTTP port (gRPC port + 1000)
	addr := addrs[rand.Intn(len(addrs))]
	// Extract port from address and add 1000
	port := "8082" // Default rating port
	if len(addr) > 0 {
		// Parse the address to get port and add 1000
		port = "9082" // 8082 + 1000
	}

	url := "http://localhost:" + port + "/rating"
	log.Printf("Calling rating service. Request: GET %s", url)
	req, err := http.NewRequest(http.MethodGet, url, nil)
	if err != nil {
		return 0, err
	}

	req = req.WithContext(ctx)
	values := req.URL.Query()
	values.Add("id", fmt.Sprintf("%v", recordID))
	values.Add("type", fmt.Sprintf("%v", recordType))
	req.URL.RawQuery = values.Encode()
	resp, err := http.DefaultClient.Do(req)
	if err != nil {
		return 0, err
	}

	defer resp.Body.Close()
	if resp.StatusCode == http.StatusNotFound {
		return 0, gateway.ErrNotFound
	} else if resp.StatusCode/100 != 2 {
		return 0, fmt.Errorf("non-2xx response: %v", resp)
	}

	var v float64
	if err := json.NewDecoder(resp.Body).Decode(&v); err != nil {
		return 0, err
	}

	return v, nil
}

func (g *Gateway) PutRating(ctx context.Context, recordID model.RecordID, recordType model.RecordType, rating *model.Rating) error {
	addrs, err := g.registry.ServiceAddresses(ctx, "rating")
	if err != nil {
		return err
	}

	// Use HTTP port (gRPC port + 1000)
	addr := addrs[rand.Intn(len(addrs))]
	// Extract port from address and add 1000
	port := "8082" // Default rating port
	if len(addr) > 0 {
		// Parse the address to get port and add 1000
		port = "9082" // 8082 + 1000
	}

	url := "http://localhost:" + port + "/rating"
	log.Printf("Calling rating service. Request: PUT %s", url)
	req, err := http.NewRequest(http.MethodPut, url, nil)
	if err != nil {
		return err
	}

	req = req.WithContext(ctx)
	values := req.URL.Query()
	values.Add("id", fmt.Sprintf("%v", recordID))
	values.Add("type", fmt.Sprintf("%v", recordType))
	values.Add("userId", fmt.Sprintf("%v", rating.UserID))
	values.Add("value", fmt.Sprintf("%v", rating.Value))
	req.URL.RawQuery = values.Encode()
	resp, err := http.DefaultClient.Do(req)
	if err != nil {
		return err
	}

	defer resp.Body.Close()
	if resp.StatusCode/100 != 2 {
		return fmt.Errorf("non-2xx response: %v", resp)
	}

	return nil
}
